Fix text align

--- a/src/definitions/collections/grid.less
+++ b/src/definitions/collections/grid.less
@@ -1236,7 +1236,6 @@ body > .ui.grid {
 .ui.grid > [class*="left aligned"].column:not(.row),
 .ui.grid > .row > [class*="left aligned"].column {
   text-align: left;
-  align-items: flex-start !important;
   align-self: inherit;
 }
 
@@ -1247,7 +1246,6 @@ body > .ui.grid {
 .ui.grid > [class*="center aligned"].column:not(.row),
 .ui.grid > .row > [class*="center aligned"].column {
   text-align: center;
-  align-items: center !important;
   align-self: inherit;
 }
 .ui[class*="center aligned"].grid {
@@ -1260,7 +1258,6 @@ body > .ui.grid {
 .ui.grid > [class*="right aligned"].column:not(.row),
 .ui.grid > .row > [class*="right aligned"].column {
   text-align: right;
-  align-items: flex-end !important;
   align-self: inherit;
 }
 
